// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Card deprecated: modalBodyClassName 1`] = `
<div>
  <div
    class="card"
  >
    <div
      class="deprecated classes card-body"
    >
      This is the content
    </div>
  </div>
</div>
`;

exports[`Component: Card deprecated: modalFooterClassName 1`] = `
<div>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      This is the content
    </div>
    <div
      class="deprecated classes card-footer"
    >
      test
    </div>
  </div>
</div>
`;

exports[`Component: Card deprecated: modalHeaderClassName 1`] = `
<div>
  <div
    class="card"
  >
    <div
      class="deprecated classes card-header"
    >
      test
    </div>
    <div
      class="card-body"
    >
      This is the content
    </div>
  </div>
</div>
`;

exports[`Component: Card ui basic: Component: Card => ui => basic 1`] = `
<div>
  <div
    class="card"
  >
    <div
      class="card-header card-header"
    >
      A simple header
    </div>
    <div
      class="card-body card-body"
    >
      <fieldset
        class="radio-group  mb-3"
      >
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              type="radio"
              value="local"
            />
             
            local
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              type="radio"
              value="development"
            />
             
            development
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              type="radio"
              value="test"
            />
             
            test
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              type="radio"
              value="acceptation"
            />
             
            acceptation
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              type="radio"
              value="production"
            />
             
            production
          </label>
        </div>
      </fieldset>
    </div>
    <div
      class="card-footer card-footer"
    >
      A simple footer
    </div>
  </div>
</div>
`;

exports[`Component: Card ui without footer 1`] = `
<div>
  <div
    class="card"
  >
    <div
      class="card-header card-header"
    >
      A simple header
    </div>
    <div
      class="card-body card-body"
    >
      <fieldset
        class="radio-group  mb-3"
      >
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              type="radio"
              value="local"
            />
             
            local
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              type="radio"
              value="development"
            />
             
            development
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              type="radio"
              value="test"
            />
             
            test
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              type="radio"
              value="acceptation"
            />
             
            acceptation
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              type="radio"
              value="production"
            />
             
            production
          </label>
        </div>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Component: Card ui without header 1`] = `
<div>
  <div
    class="card"
  >
    <div
      class="card-body card-body"
    >
      <fieldset
        class="radio-group  mb-3"
      >
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              type="radio"
              value="local"
            />
             
            local
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              type="radio"
              value="development"
            />
             
            development
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              type="radio"
              value="test"
            />
             
            test
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              type="radio"
              value="acceptation"
            />
             
            acceptation
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              type="radio"
              value="production"
            />
             
            production
          </label>
        </div>
      </fieldset>
    </div>
    <div
      class="card-footer card-footer"
    >
      A simple footer
    </div>
  </div>
</div>
`;
